tests/ui/suggestions/suggest-let-and-typo-issue-132483.rs
fn main() {
    let x1 = 0;
    x2 = 1;
    //~^ ERROR E0425
    other_val = 2;
    //~^ ERROR E0425
}
